[gd_scene load_steps=10 format=3 uid="uid://b6n14v7gleaw7"]

[ext_resource type="Script" path="res://Game.gd" id="1_ivrrr"]
[ext_resource type="PackedScene" uid="uid://bfekoed8ah4t2" path="res://Space.tscn" id="1_xomgk"]
[ext_resource type="PackedScene" uid="uid://u280pgs25fsf" path="res://HomePlanet.tscn" id="3_hkad2"]
[ext_resource type="Script" path="res://ShipHpValue.gd" id="5_5lwcj"]
[ext_resource type="PackedScene" uid="uid://dtyjnjby7c60v" path="res://Asteroids.tscn" id="5_xfimw"]
[ext_resource type="PackedScene" uid="uid://djapl0b46wfg7" path="res://Ship.tscn" id="7_62gjn"]
[ext_resource type="Script" path="res://PlanetHpValue.gd" id="7_c3yvt"]
[ext_resource type="Script" path="res://ScoreValue.gd" id="8_4ngad"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3joo"]
size = Vector2(20, 440)

[node name="World" type="Node2D"]
script = ExtResource("1_ivrrr")

[node name="Space" parent="." instance=ExtResource("1_xomgk")]

[node name="HomePlanet" parent="." instance=ExtResource("3_hkad2")]

[node name="Ship" parent="." instance=ExtResource("7_62gjn")]
position = Vector2(64, 320)
highestPosition = 128.0
lowestPosition = 480.0

[node name="Asteroids" parent="." instance=ExtResource("5_xfimw")]

[node name="BulletTerminator" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="BulletTerminatorCollision" type="CollisionShape2D" parent="BulletTerminator"]
position = Vector2(520, 292)
shape = SubResource("RectangleShape2D_l3joo")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ShipHpLabel" type="Label" parent="HUD"]
offset_left = 171.0
offset_top = 10.0
offset_right = 251.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(0.817523, 0, 0.14977, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 18
text = "Ship HP:"

[node name="PlanetHpLabel" type="Label" parent="HUD"]
offset_left = 156.0
offset_top = 34.0
offset_right = 252.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0.262346, 0.400757, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 18
text = "Planet HP:"

[node name="ShipHpValue" type="Label" parent="HUD"]
offset_left = 249.0
offset_top = 10.0
offset_right = 289.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(0.815686, 0, 0.14902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 18
text = "100
"
script = ExtResource("5_5lwcj")

[node name="PlanetHpValue" type="Label" parent="HUD"]
offset_left = 252.0
offset_top = 34.0
offset_right = 294.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0.262745, 0.4, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 18
text = "1000
"
script = ExtResource("7_c3yvt")

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_left = 180.0
offset_top = 408.0
offset_right = 233.0
offset_bottom = 434.0
theme_override_colors/font_color = Color(0.277611, 0.897035, 0.726865, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 18
text = "Score:"

[node name="ScoreValue" type="Label" parent="HUD"]
offset_left = 238.0
offset_top = 409.0
offset_right = 278.0
offset_bottom = 435.0
theme_override_colors/font_color = Color(0.277611, 0.897035, 0.726865, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 2
script = ExtResource("8_4ngad")

[connection signal="scores_changed" from="." to="HUD/ScoreValue" method="_on_world_scores_changed"]
[connection signal="on_hp_changed" from="HomePlanet" to="." method="_on_home_planet_on_hp_changed"]
[connection signal="on_hp_changed" from="HomePlanet" to="HUD/PlanetHpValue" method="_on_home_planet_on_hp_changed"]
[connection signal="on_planet_death" from="HomePlanet" to="." method="_on_home_planet_on_planet_death"]
[connection signal="on_hp_changed" from="Ship" to="." method="_on_ship_on_hp_changed"]
[connection signal="on_hp_changed" from="Ship" to="HUD/ShipHpValue" method="_on_ship_on_hp_changed"]
[connection signal="on_ship_death" from="Ship" to="." method="_on_ship_on_ship_death"]
[connection signal="asteroid_destroyed_by_bullet" from="Asteroids" to="." method="_on_asteroids_asteroid_destroyed_by_bullet"]
